# lucrezio_description

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch  robot (copy).launch  robot.launch
urdf/: lucrezio.urdf.xacro  lucrezio_with_logical.urdf.xacro
